--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 html,
 body {
@@ -12,16 +13,22 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #8accde;
+
 }
 .pannel {
   border: 2px solid;
   height: 80vh;
   width: 80vw;
+  border-radius: 15px;
+  overflow: hidden;
+  background-color: #fff;
 }
 .pannel .header {
-  border: 2px solid violet;
+ 
   display: flex;
   justify-content: space-between;
   padding: 10px 60px;
@@ -34,7 +41,6 @@ body {
 .score {
   display: flex;
   gap: 10px;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -57,7 +63,7 @@ body {
 
 .pannel .bubble-area {
   padding: 10px;
-  border: 2px solid green;
+
   height: 85%;
   display: flex;
   justify-content: center;
@@ -65,6 +71,7 @@ body {
   gap: 5px;
   flex-wrap: wrap;
   overflow: hidden;
+
 }
 .bubble-area .bubble {
   background-color: green;
@@ -79,15 +86,81 @@ body {
 }
 .bubble-area .bubble:hover {
   font-size: 25px;
+  cursor: pointer;
 }
+
+.time-out{
+  
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  letter-spacing: 4px;
+  font-size: 20px;
+}
+.restart {
+  padding: 8px 10px;
+  
+  border-radius: 5px;
+  letter-spacing: 3px;
+  border: 1px solid ;
+  background-color: transparent;
+  transition: all .2s;
+  
+}
+.time-out button:hover{
+  background-color: #222;
+  color: #fff;
+}
+
+
+
+
+
+
+
+
+
+footer{
+  /* background-color: #222; */
+  width: 80vw;
+  height: 10vh;
+  position: absolute;
+  bottom: 0;
+  padding: 0 20px;
+
+}
+
+footer .links{
+display: flex;
+justify-content: center;
+gap: 30px;
+margin-top: 10px;
+list-style: none;
+
+}
+.links a{
+  color: #222;
+  /* color: #fff; */
+  text-decoration: none;
+  font-weight: 700;
+}
+
+
+
+
+
+
 @media (max-width: 700px) {
     
-    .header>div{
-        display: flex;
-        flex-direction: column;
-        gap: 0px;
-        justify-content: center;
-        align-items: center;
+    .header div{
+      flex-direction: column;
+    }
+    .pannel .header{
+      padding: 5px 30px;
+      
     }
    
  
