--- a/style.css
+++ b/style.css
@@ -123,14 +123,10 @@ body {
 
 
 
-
-
-
-
 footer{
   /* background-color: #222; */
   width: 80%;
-  margin-bottom: 20px;
+/*   margin-bottom: 20px; */
 
   position: absolute;
   bottom: 0;
